--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 env:
   global:
-    - CC_TEST_REPORTER_ID=XXX
+    - CC_TEST_REPORTER_ID=44193afda4ab5eed237422631e68118dd9b73b3977890ea1c89efe28eb4c04d4
 
 language: node_js
 
