--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/emsa16/XXX.git"
+    "url": "git+https://github.com/emsa16/realtimegame-frontend.git"
   },
   "author": "Emil Sandberg",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/emsa16/XXX/issues"
+    "url": "https://github.com/emsa16/realtimegame-frontend/issues"
   },
-  "homepage": "XXX",
+  "homepage": "https://github.com/emsa16/realtimegame-backend#readme",
   "eslintConfig": {
     "extends": "react-app"
   },
