--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preclean-all": "yarn clean",
     "clean-all": "rm -rf .bin vendor node_modules yarn.lock",
     "pretest": "yarn htmlhint && yarn stylelint && yarn eslint",
-    "test": "react-scripts test --coverage --verbose",
+    "test": "react-scripts test --coverage --verbose --silent",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
@@ -49,8 +49,11 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint-plugin-react": "^7.12.4",
     "htmlhint": "^0.10.1",
+    "mock-socket": "^8.0.5",
     "stylelint": "^9.10.1"
   },
   "dependencies": {
