--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "clean": "rm -rf build cache/*/* npm-debug.log coverage",
     "preclean-all": "yarn clean",
     "clean-all": "rm -rf .bin vendor node_modules yarn.lock",
-    "pretest": "yarn htmlhint && yarn stylelint && yarn eslint",
+    "pretest": "yarn stylelint && yarn eslint",
     "test": "react-scripts test --coverage --verbose --silent",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "deploy": "yarn build && rsync -av build/* deploy@emilsandberg.com:/var/www/game.emilsandberg.com/html/",
     "tag-prepare": "grep version package.json && git describe --abbrev=0 && git status",
-    "htmlhint": "[ ! -f .htmlhintrc ] || htmlhint --ignore build/**,node_modules/**,coverage/** | grep -v 'Config loaded:'",
     "stylelint": "[ ! -f .stylelintrc.json ] || stylelint **/*.css",
     "stylelint-fix": "[ ! -f .stylelintrc.json ] || stylelint **/*.css --fix",
     "eslint": "[ ! -f .eslintrc.json ] || eslint .",
@@ -52,7 +51,6 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint-plugin-react": "^7.12.4",
-    "htmlhint": "^0.10.1",
     "mock-socket": "^8.0.5",
     "stylelint": "^9.10.1"
   },
@@ -60,6 +58,6 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^2.1.5"
+    "react-scripts": "^3.0.1"
   }
 }
